AX: WebCore::AXIsolatedTree should use WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<>. https://bugs.webkit.org/show_bug.cgi?id=251223 rdar://104512153

Reviewed by Alex Christensen.

AXIsolatedTree now derives from ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr instead of ThreadSafeRefCounted and CanMakeWeakPtr, which was a problem since WeakPtr is not thread safe.
In order to have a single AXTreeStore that keeps both WeakPtr<AXObjectCache> and ThreadSafeWeakPtr<AXIsolatedTree>, we added the variant AXTreePtr. Note that WeakPtr<AXObjectCache> does not have to be thread safe since AXObjectCache is only used on the main thread.

Canonical link: https://commits.webkit.org/259536@main