Source/WebCore/accessibility/AXObjectCache.cpp
@@ -246,7 +246,7 @@ AXObjectCache::AXObjectCache(Document& document)
         loadingProgress = 1;
     m_loadingProgress = loadingProgress;
 
-    AXTreeStore::add(m_id, this);
+    AXTreeStore::add(m_id, WeakPtr { this });
 }
 
 AXObjectCache::~AXObjectCache()
